2005-04-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-item.cc: Fix link.

	* Documentation/user/changing-defaults.itely (Changing defaults):
	Fix programs reference links.

	* Documentation/user/music-glossary.tely: Convert to utf-8.

2005-04-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make: remove TEXMF from variables.
	remove DEB_BUILD pk font variables.
	remove GUILE_LOAD_PATH
	remove TeX memory vars.

2005-04-04  Werner Lemberg  <wl@gnu.org>

	* lilypond/scm-option.cc (ly_option_usage): Add final newline.

2005-04-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ps/lilyponddefs.ps: remove reencode-font

	* lily/simple-spacer.cc (add_columns): also compare
	directly. Column rank doesn't distinguish between broken and
	unbroken columns. This fixes large spaces before time sig changes.

	* Documentation/user/point-and-click.itely: document ly:set-option.

	* lily/grob.cc (get_uncached_stencil): only set grob-cause if
	point_and_click_global is set.

	* lily/scm-option.cc (LY_DEFINE): add point-and-click
	ly:set-option argument.

2005-04-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: Include symlinks in webball.

	* Documentation/user/GNUmakefile (source-links): Add symlinks to
	source dir for split and non-split manuals.

	* Documentation/user/*y: Fix @uref/@inputfile links for
	split/non-split HTML documents.

	* Documentation/user/GNUmakefile (local-WWW): Do not generate
	.ps.gz.
	
2005-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: Add newline.

2005-04-01  Erlend Aasland  <erlenda@gmail.com>

	* tex/lilyponddefs.tex: use color instead of xcolor
	* scm/output-tex.scm: minor editing

2005-04-02  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/music-functions.scm (display-scheme-music): pretty printer
	for music expressions.

2005-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/install-info-html.sh (index_file): Fix link.

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
